--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -2,17 +2,10 @@
     width: 100%;
     margin: auto;
     height: 250px;
-    /* overflow: scroll; */
+    overflow: scroll;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
-}
-
-@media (min-width: 1000px) and (min-height: 700px) {
-    .Burger {
-        width: 700px;
-        height: 600px;
-    }
 }
 
 @media (min-width: 500px) and (min-height: 400px) {
@@ -26,5 +19,12 @@
     .Burger {
         width: 450px;
         height: 400px;
+    }
+}
+
+@media (min-width: 1000px) and (min-height: 700px) {
+    .Burger {
+        width: 700px;
+        height: 600px;
     }
 }
