--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -3,12 +3,13 @@
     padding: 0;
     list-style: none;
     display: flex;
+    flex-flow: column;
     align-items: center;
     height: 100%;
 }
 
-@media(min-width: 500px) {
+@media (min-width: 500px) {
     .NavigationItems {
-        flex-flow: row
+        flex-flow: row;
     }
 }
