--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -7,7 +7,7 @@
 .Label {
     font-weight: bold;
     display: block;
-    margin-bottom: 8px; 
+    margin-bottom: 8px;
 }
 
 .InputElement {
@@ -21,13 +21,12 @@
     box-sizing: border-box;
 }
 
-Invalid {
-    border: 1px solid red;
-    background-color: salmon;
-    
-}
-
 .InputElement:focus {
     outline: none;
     background-color: #ccc;
+}
+
+.Invalid {
+    border: 1px solid red;
+    background-color: #FDA49A;
 }
